--- a/kunalm.xyz/package.json
+++ b/kunalm.xyz/package.json
@@ -13,5 +13,8 @@
     "imagemin": "^8.0.1",
     "imagemin-cli": "^7.0.0",
     "luxon": "^2.1.1"
+  },
+  "devDependencies": {
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3"
   }
 }
